Fixed z-index safari #4

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -50,6 +50,7 @@ footer {
    z-index: 0;
    height: 100vh;
    width: 100vw;
+   -webkit-overflow-scrolling: auto !important;
 }
 
 .preloader{
